# duplikat

./: .gitignore  Cargo.toml  Makefile  README.md  br.dev.kov.Duplikat.json  build.rs  meson.build
data/: br.dev.kov.Duplikat.appdata.xml.in  br.dev.kov.Duplikat.desktop.in  br.dev.kov.Duplikat.gschema.xml  meson.build
data/icons/: meson.build
duplikat/: Cargo.toml  build.rs
duplikat-types/: Cargo.toml
duplikat-types/src/: client.rs  error.rs  lib.rs  server.rs
duplikat/src/: duplikat.gresource.xml  edit.rs  main.rs  overview.rs  prefix.rs  server.rs  style.css  utils.rs
duplikatd/: Cargo.toml
duplikatd/src/: backups.rs  main.rs  restic.rs
po/: POTFILES  meson.build
src/: config.rs.in  duplikat.gresource.xml  error.rs  main.rs  meson.build  window.rs  window.ui
src/widgets/: backup_row.rs  backup_row.ui  mod.rs
