[package]
name = "duplikat"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs/"

[dependencies.gtk]
git = "https://github.com/gtk-rs/gtk4-rs"
package = "gtk4"

[dependencies.libadwaita]
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs"

[dependencies.gtk-macros]
version = "0.3.0"

[dependencies.gettext-rs]
version = "0.7"
features = ["gettext-system"]

[dependencies.duplikat-types]
path = "./duplikat-types"

[dependencies.once_cell]
version = "1"

[dependencies.thiserror]
version = "1.0.20"

[dependencies.serde]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.isahc]
version = "1.4"
features = ["json"]

[dependencies.reqwest]
version = "0.11"
features = ["blocking", "json"]
