[package]
name = "duplikat"
version = "0.1.0"
authors = ["Gustavo Noronha Silva <gustavo@noronha.dev.br>"]
edition = "2018"

[dependencies]
duplikat-types = { path = "../duplikat-types" }
gtk = { version = "0.2", package = "gtk4" }
glib = { version = "0.14.2" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
strum = "0.21"