[package]
name = "duplikat"
version = "0.1.0"
authors = ["Gustavo Noronha Silva <gustavo@noronha.dev.br>"]
edition = "2018"

[build-dependencies]
gbuild = "0.1"

[dependencies]
dirs = "3.0"
duplikat-types = { path = "../duplikat-types" }
gdk = { version = "0.2", package = "gdk4" }
gtk = { version = "0.2", package = "gtk4" }
glib = { version = "0.14" }
gio = { version = "0.14" }
serde_json = "1.0"
strum = "0.21"